# starlark-rust

./: .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  WORKSPACE  package.json  pnpm-lock.yaml
allocative/allocative/: BUILD.bazel
allocative/allocative_derive/: BUILD.bazel
gazebo/dupe/: BUILD.bazel
gazebo/dupe_derive/: BUILD.bazel
gazebo/gazebo/: BUILD.bazel
gazebo/gazebo_derive/: BUILD.bazel
starlark/: BUILD.bazel  Cargo.toml  build_grammar.rs
starlark/src/: read_line.rs
starlark/src/environment/: modules.rs
starlark/src/eval/: mod.rs
starlark/src/lsp/: server.rs
starlark/src/syntax/: ast.rs  grammar.report  mod.rs
starlark/src/values/layout/: pointer.rs
starlark/src/values/layout/heap/: arena.rs
starlark/src/values/types/: known_methods.rs
starlark_derive/: BUILD.bazel
starlark_derive/src/: docs.rs
starlark_map/: BUILD.bazel  Cargo.toml
starlark_wasm/: BUILD.bazel  Cargo.toml  entry.ts  index.html  tsconfig.json  webpack.config.js
starlark_wasm/src/: lib.rs
