[workspace]
resolver = "2"
members = [
    "allocative/allocative",
    "allocative/allocative_derive",
    "gazebo/dupe",
    "gazebo/gazebo",
    "gazebo/gazebo_derive",
    "starlark",
    "starlark_derive",
    "starlark_wasm",
]

[workspace.dependencies]
allocative = { version = "0.2", path = "allocative/allocative" }
allocative_derive = { version = "0.2", path = "allocative/allocative_derive" }
dupe = { version = "0.8.1", path = "gazebo/dupe" }
gazebo = { version = "0.8.1", path = "gazebo/gazebo" }
gazebo_derive = { version = "0.8.1", path = "gazebo/gazebo_derive" }

ctor = "0.1.26"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0.3"



# [patch.crates-io]
# rustix = { path = "submodules/rustix" }