load("@rules_rust//rust:defs.bzl", "rust_library")

licenses(["notice"])  # Add a license to the target

rust_library(
    name = "starlark_map",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    crate_features = ["hashbrown"],
    proc_macro_deps = [
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//allocative/allocative",
        "//gazebo/dupe",
        "//gazebo/gazebo",
        "@crate_index//:fnv",
        "@crate_index//:hashbrown",
    ],
)
