load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_shared_library")
load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_binary", "webpack_bundle")

# rust shared library that depends on '//starlark'
rust_shared_library(
    name = 'starlark_wasm',
    srcs = ['src/lib.rs'],
    deps = [
        '//starlark',
    ],
    edition = '2021',
)


rust_wasm_bindgen(
    name = "starlark_wasm_bindgen",
    target = "web",
    wasm_file = ":starlark_wasm",
)

webpack_binary(
    name = "webpack",
    node_modules = "//:node_modules",
)

webpack_bundle(
    name = "bundle",
    srcs = [
        ":starlark_wasm_bindgen",
    ],
    data = [
        ":starlark_wasm_bindgen",
        ":index.html",
    ],
    entry_point = "entry.js",
    webpack = ":webpack",
    webpack_config = "webpack.config.js",
    deps = [
        ":webpack_config",
    ],
)
js_library(
    name = "webpack_config",
    deps = [
        "//:node_modules/webpack",
    ],
)
