load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_binary", "webpack_bundle")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

# rust shared library that depends on '//starlark'
rust_shared_library(
    name = "starlark_wasm",
    srcs = ["src/lib.rs"],
    edition = "2021",
    deps = [
        "//starlark",
        "@crate_index//:js-sys",
        "@crate_index//:wasm-bindgen",
        "@crate_index//:web-sys",
    ],
)

rust_wasm_bindgen(
    name = "starlark_wasm_bindgen",
    target = "web",
    wasm_file = ":starlark_wasm",
)

webpack_binary(
    name = "webpack",
    node_modules = "//:node_modules",
)

webpack_bundle(
    name = "bundle",
    srcs = [
        ":starlark_wasm_bindgen",
    ],
    data = [
        ":index.html",
        ":starlark_wasm_bindgen",
    ],
    entry_point = "entry.js",
    webpack = ":webpack",
    webpack_config = "webpack.config.js",
    deps = [
        ":webpack_config",
    ],
)

js_library(
    name = "webpack_config",
    deps = [
        "//:node_modules/webpack",
    ],
)

ts_project(
    name = "typescript",
    srcs = glob([
        "*.ts",
        "*.tsx",
    ]) + [":starlark_wasm_bindgen"],
    declaration = True,
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/@types/node",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)
