load("@rules_rust//rust:defs.bzl", "rust_library")

licenses(["notice"])

rust_library(
    name = "allocative",
    srcs = glob(["src/**/*.rs"]),
    crate_features = [
        "bumpalo",
        "hashbrown",
        "num-bigint",
    ],
    edition = "2021",
    proc_macro_deps = [
        "//allocative/allocative_derive",
        "@crate_index//:ctor",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crate_index//:bumpalo",
        "@crate_index//:either",
        "@crate_index//:hashbrown",
        "@crate_index//:num-bigint",
        "@crate_index//:once_cell",
    ],
)
