load("@rules_rust//rust:defs.bzl", "rust_library")

licenses(["notice"])  # Add a license to the target

rust_library(
    name = "gazebo",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    proc_macro_deps = [
        "//gazebo/gazebo_derive",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//gazebo/dupe",
    ],
)
